[package]
name = "atomic-ref2"
version = "0.2.1"
authors = ["Ryan Leckey <leckey.ryan@gmail.com>"]
description = "Provides AtomicOptionRef and AtomicRef. Intended to map to java.util.concurrent.atomic.AtomicReference in Java."
keywords = ["atomic"]
categories = ["asynchronous", "concurrency", "data-structures"]
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://github.com/mehcode/atomic-ref-rs"

[dependencies]

[dev-dependencies]
rand = "0.5"
